deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: summary
  template:
    metadata:
      labels:
        app: summary
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: summary-prediction
        image: ilyaastapov/summary-prediction:latest
        ports:
        - containerPort: 5000
