service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summary-model-app
spec:
  selector:
    app: summary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
#  type: NodePort
  type: LoadBalancer
